...
"1 Minute" = "1 Minute";

/* Button value for A1c */
"A1c" = "A1c";

/* Popup Accept-Button */
"Accept" = "Accept";

/* Add Carbs Popup Title
   Button to add consumed Carbs */
"Add Carbs" = "Add Carbs";

/* SnoozeActionsViewController Quick Snooze Hint */
...
"Unknown error while extracting data from Pebble Watch API" = "Unknown error while extracting data from Pebble Watch API";

/* Label for Urgent High */
"Urgent High" = "Urgent High";

/* Title for URL */
"URL" = "URL";

/* Label for 'Use the following Units' */
"Use the following Units" = "Use the following Units";

/* Label for Version */
"Version" = "Version";
...
"Reservoir Critical" = "Reservoir Critical";

/* Reservoir Critical Notification Body */
"Your reservoir is low (%d units)." = "Your reservoir is low (%d units).";

/* Disclaimer Popup Title */
"Disclaimer!" = "Disclaimer!";

/* Disclaimer Popup Message */
"Don't use this App for medical decisions! It comes with absolutely NO WARRANTY. It is maintained by volunteers only. Use it at your own risk!" = "Don't use this App for medical decisions! It comes with absolutely NO WARRANTY. It is maintained by volunteers only. Use it at your own risk!";

/* Pro Promotion */
"Support Nightguard" = "Support Nightguard";
...
"30min" = "30min";
"3h" = "3h";
"45min" = "45min";
"5min" = "5min";
"6h" = "6h";
"Activity" = "Activity";
"Alarms" = "Alarms";
"BG Gauge" = "BG Gauge";
"BG Values as Gauge" = "BG Values as Gauge";
"Cancel" = "Cancel";
"Care" = "Care";
"Check BG every minute" = "Check BG every minute";
"Crown Scrolls" = "Crown Scrolls";
...
"Delete Target" = "Delete Target";
"Do you want to add %dg of carbs?" = "Do you want to add %dg of carbs?";
"Do you want to modify the change date to %@" = "Do you want to modify the change date to %@";
"High Alert" = "High Alert";
"Invalid change" = "Invalid change";
"Low Alert" = "Low Alert";
"Main" = "Main";
"Max Background Updates" = "Max Background Updates";
"Max Subscription Active" = "Max Subscription Active";
"Meal Soon" = "Meal Soon";
"NIGHTSCOUT" = "NIGHTSCOUT";
"No" = "No";
"No Gauge Support for this widget!" = "No Gauge Support for this widget!";
...
