...
                                        .foregroundColor(.gray)
                                }
                                .frame(width: 48, height: 48)
                                .background(Color(UIColor.darkGray.withAlphaComponent(0.3)))
                                .clipShape(Circle())
                                .padding(.trailing, 8)
                                .accessibilityIdentifier("actionsMenuButton")
                                .onLongPressGesture {
                                    showNightscout = true
                                }
                                .confirmationDialog("Actions", isPresented: $showActionsMenuPopup, titleVisibility: .hidden) {
                                    Button(NSLocalizedString("Open your Nightscout site", comment: "Link to NS site")) {
                                        showNightscout = true
...
